--- a/reports/slides_apr.Rmd
+++ b/reports/slides_apr.Rmd
@@ -519,6 +519,7 @@ abline(h=.5, lty=2)
 ```{r model 1, echo = FALSE, message=FALSE, warning=FALSE}
 # Modelo Estatico
 estat$Estimation
+estat$R2
 ```
 
 ---
@@ -550,6 +551,7 @@ abline(h=.5, lty=2)
 
 
 dyn_bin$Estimation
+dyn_bin$R2
 ```
 
 ---
@@ -580,6 +582,7 @@ abline(h=.5, lty=2)
 # Dynamic Model lag index (Autoregressivo?)
 
 dyn_ind$Estimation
+dyn_ind$R2
 ```
 
 ---
@@ -612,6 +615,7 @@ abline(h=.5, lty=2)
 # Dinamico Autoregressivo
 
 dyn_aut$Estimation
+dyn_aut$R2
 ```
 
 ---
