--- a/docs/slides_apr.Rmd
+++ b/docs/slides_apr.Rmd
@@ -656,3 +656,14 @@ Volume 49, Issue 2,
 class: center, middle
 
 # Agradecimentos
+
+```{r ghpage, echo = FALSE}
+
+usethis::use_github_pages(branch = "main",
+                       path = "/reports")
+
+
+```
+
+
+---
