--- a/docs/slides_apr.Rmd
+++ b/docs/slides_apr.Rmd
@@ -659,7 +659,8 @@ class: center, middle
 
 ```{r ghpage, echo = FALSE, message=FALSE}
 
-usethis::use_github_pages(branch = "main")
+usethis::use_github_pages(branch = "main",
+                          path = "/docs")
 
 
 ```
